style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");

body {
  font-family: 'Poppins'sans-serif;
  max-width: 768px;
  margin: auto;
  margin-top: 1%;
  padding: 6%;
  height: 70vh;
  position: relative;
}

header {
  display: flex;
  flex-direction: column;
  background-image: url(img/header-shapes\ mobile.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: inherit;
  background-color: #fff;
  padding: 5%;
}

.logo {
  font-weight: 700;
  font-size: 18px;
  font-family: 'Poppins', sans-serif;
  width: 100%;
  display: flex;
}

.logo a {
  color: #6070ff;
  text-decoration: none;
  font-size: 1.5rem;
}

nav {
  display: flex;
  justify-content: space-between;
  padding: 1%;
}

nav .hamburger-menu {
  color: #6070ff;
  font-weight: 700;
  font-size: 1.6rem;
  cursor: pointer;
  position: absolute;
  top: 7.5rem;
  right: 6.5rem;
}

.title {
  display: flex;
  flex-direction: column;
  margin-top: 5%;
}

.title h1 {
  font-size: 3rem;
  font-family: 'Poppins'sans-serif;
  text-transform: capitalize;
  color: #172b4d;
  margin-top: 18%;
  margin-bottom: 1%;
}

p {
  font-family: 'Poppins'sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 25px;
  color: #344563;
  margin-bottom: 2%;
}

h2 {
  font-family: 'Poppins'sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 20px;
  color: #6070ff;
  margin-bottom: 10px;
}

.socials {
  position: relative;
  top: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 10%;
  height: 1.2rem;
  list-style: none;
  flex-grow: 0;
  transform: translateX(-56%);
}

.socials li a img {
  padding: 0 15px;
  transition: transform 0.1s;
}

.socials li a img:hover {
  transform: translateY(-20%);
  color: red;
}

@media (max-width: 775px) and (min-width: 800px) {
  body {
    max-width: 750px;
    margin: auto;
    text-align: start;
  }

  .title {
    height: 146px;
    margin-top: 12%;
  }

  .socials {
    position: absolute;
    left: 11%;
    right: 57.07%;
    top: 95%;
    bottom: 18.87%;
    flex-grow: 0;
    transform: translateX(-70%);
  }

  nav .hamburger-menu {
    color: #6070ff;
    font-weight: 700;
    font-size: 1.6rem;
    cursor: pointer;
    position: absolute;
    top: 3.3rem;
    right: 3.2rem;
  }
}

